Updated section on <module> attributes that are N numbers.

--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.4 2002/05/30 17:41:34 thendrix Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.5 2002/06/03 16:10:06 thendrix Exp $</p>
 <b>Contents</b><br>
 
 
@@ -180,8 +180,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/05/30 17:41:34 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.4 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/03 16:10:06 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.5 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -271,7 +271,7 @@ name the select&nbsp;classification_item instead of classified_select.&nbsp;</fo
 <p>&nbsp;</p>
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.4 2002/05/30 17:41:34 thendrix Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.5 2002/06/03 16:10:06 thendrix Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -279,7 +279,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.4 2002/05/30 17:41:34 thendrix Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.5 2002/06/03 16:10:06 thendrix Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -288,7 +288,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.4 2002/05/30 17:41:34 thendrix Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.5 2002/06/03 16:10:06 thendrix Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 </span>
@@ -382,7 +382,7 @@ names</font></span></h2>
   <div>
     &nbsp;
   </div>
-  &nbsp;
+&nbsp;
 </div>
 <div>
   <font face="Arial" size="2"><span class="856574909-30052002">I</span></span><span class="856574909-30052002">Rob
@@ -579,55 +579,47 @@ Commit to validate&nbsp;</font></span>
 Tell everyone what the new module name is, so that they can change all references
 from the old module to new module</font></span>
 <p>&nbsp;</p>
-<h2>Module attributes:&nbsp;</h2>
-<h2> <a name="wg">WGN numbers</a>, part, version, status, checklists language, year of publication</h2>
+<h2>&lt;module&gt;&nbsp; attributes:&nbsp;</h2>
+<h2> <a name="wg">WGN numbers</a>, part, version, status, checklists language, year of
+publicatio</h2>
 <span class="772050311-26032002">
-<div>
-  &nbsp;
-</div>
-<div>
-  &nbsp;
-  <p>
-  <span class="672234308-30052002"><font face="Arial" size="2">The attributes on
-  the module will now look something like this:</font></span>
-</div>
-<div>
-  <font face="Arial" size="2">
-  <span class="672234308-30052002">&lt;module<br>
-  &nbsp;&nbsp; name=&quot;work_order&quot;<br>
-  &nbsp;&nbsp; part=&quot;1043&quot;<br>
-  &nbsp;&nbsp; version=&quot;1&quot;<br>
-  &nbsp;&nbsp; wg.number=&quot;<font color="#ff0000">N90000</font>&quot;<br>
-  &nbsp;&nbsp; <strong> <font color="#ff0000">wg.number.supersedes=&quot;N774&quot;<br>
-  </font></strong></span></font>
 
 </span>
 </span>
-&nbsp;&nbsp;
-<span class="919371121-26032002">
-checklist.internal_review=&quot;00000&quot;<br>
-&nbsp;&nbsp; checklist.project_leader=&quot;00000&quot;<br>
-&nbsp;&nbsp; checklist.convener=&quot;000000&quot;
-  <span class="672234308-30052002"><font face="Arial" size="2"> <font color="#ff0000"><strong><br>
-  &nbsp;&nbsp; status=&quot;TS&quot;<br>
-  </strong></font>&nbsp;&nbsp; language=&quot;E&quot;<br>
-  &nbsp;&nbsp; <font color="#ff0000"><strong>publication.year=&quot;2002&quot;<br>
-  &nbsp;&nbsp; published=&quot;y&quot;<br>
-  </strong></font>&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/05/30 17:41:34 $&quot;<br>
-  &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.4 $&quot;&gt;</font></span>
+<div>
+  <p>
+  <span class="672234308-30052002"><font face="Arial" size="2">Example of&nbsp; </font></span><font face="Arial" size="2"><span class="672234308-30052002"><span class="772050311-26032002"><span class="919371121-26032002">attributes
+</span>
+
+</span>
+  on module tag in module.xml</span></font>
 </div>
+<span class="919371121-26032002">
 <div>
   &nbsp;
 </div>
-<div>
-  <span class="672234308-30052002"><font face="Arial" size="2">Note the status
-  is now TS, the publication year 2002, and the module is published.</font></span>
+<div style="width: 868; height: 294">
+  <div>
+    <span class="659264215-05062002"><font face="Arial" color="#0000ff" size="2">&lt;module<br>
+    &nbsp;&nbsp; name=&quot;work_request&quot;<br>
+    &nbsp;&nbsp; part=&quot;1042&quot;<br>
+    &nbsp;&nbsp; version=&quot;1&quot;<br>
+    &nbsp;&nbsp; wg.number=&quot;1149&quot;<br>
+    &nbsp;&nbsp; wg.number.supersedes=&quot;722&quot;<br>
+    &nbsp;&nbsp; checklist.internal_review=&quot;1062&quot;<br>
+    &nbsp;&nbsp; checklist.project_leader=&quot;1063&quot;<br>
+    &nbsp;&nbsp; checklist.convener=&quot;1064&quot;<br>
+    &nbsp;&nbsp; status=&quot;TS&quot;<br>
+    &nbsp;&nbsp; language=&quot;E&quot;<br>
+    &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
+    &nbsp;&nbsp; published=&quot;y&quot;<br>
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/05/30 08:39:02 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.18 $&quot;&gt;</font></span>
+  </div>
+  &nbsp;</span>
+<p>&nbsp;
 </div>
-<div>
-  <span class="672234308-30052002"><font face="Arial" size="2">Furthermore,
-  N9000 is just a fictitious number.</font></span>
-  <p>&nbsp;
-</div>
+<span class="919371121-26032002">
 <div>
   Where:
 </div>
@@ -639,40 +631,51 @@ checklist.internal_review=&quot;00000&quot;<br>
 name is module name
 
 </span>
-  <span class="919371121-26032002">
 <span class="772050311-26032002">
+  <span class="919371121-26032002">
   <li><tt>part</tt> is the ISO 10303 part number.
   <li><tt>version</tt> is the version of the model,
     <dl>
       <dt>1 the first edition,
       <dt>2 for a second edition or Tech Corr against 1, etc.</dt>
     </dl>
-  <li><tt>wg.number</tt> is the SC4 N-number or document number.
+  <li><tt>wg.number</tt> is the </span>WG12 <span class="919371121-26032002">N-number</span></span><span class="919371121-26032002">
+  of the document<span class="772050311-26032002">.
   <li><font face="Arial" size="2"><span class="672234308-30052002">wg.number.supersede</span></font></span></span><font face="Arial" size="2"><span class="672234308-30052002">s
-is previous Nnumber&nbsp; (optional, use&nbsp; if p</span></font><span class="672234308-30052002"><font face="Arial" size="2">reviously
-been balloted - i.e. had a WG number assigned)</font></span>
+is previous N-number&nbsp; (optional, use&nbsp; if p</span></font><span class="672234308-30052002"><font face="Arial" size="2">reviously
+been balloted - i.e. had a WG12 number assigned)</font></span>
   <li><span class="919371121-26032002">checklist.internal_review&nbsp; is the
-    internal review checklist</span>
+    WG12 N number of the internal review checklist&nbsp;</span>
   <li><span class="919371121-26032002">checklist.project_leader&nbsp;&nbsp; is
-    the.project_leader&nbsp; checklist</span>
-  <li><span class="919371121-26032002">checklist.convener is the convener&nbsp;
+    the.WG12 N number of the project_leader&nbsp; checklist</span>
+  <li><span class="919371121-26032002">checklist.convener is the WG12 N number
+    of the convener&nbsp;
     checklist</span>
+<span class="919371121-26032002">
+<span class="772050311-26032002">
+  <li><tt>status</tt> the ISO status </span> (should be TS for PDM modules)</span>
 <span class="772050311-26032002">
 <span class="919371121-26032002">
-  <li><tt>status</tt> the ISO status
-  <li><tt>language</tt>&nbsp;&nbsp;&nbsp;&nbsp;</span> </span><span class="919371121-26032002"><span class="772050311-26032002">the language of the standard. Defaults to E - English
-  <li><tt>publication.year</tt>
-</span><tt> should be 2002 for PDM modules.</tt>
-</span><span class="919371121-26032002">
+  <li><tt>language</tt>&nbsp;&nbsp;&nbsp;&nbsp;</span> </span><span class="772050311-26032002"><span class="919371121-26032002">the language of the standard. Defaults to E - English
+  <li><tt>publication.year</tt>&nbsp;</span>&nbsp; (</span><tt><span class="919371121-26032002">should be 2002 for PDM
+modules).
+</span></tt>
+<span class="919371121-26032002">
 <span class="772050311-26032002">
-  <li><tt>published&nbsp;&nbsp;&nbsp;</tt></span><tt>&nbsp;</tt></span><span class="772050311-26032002"><span class="919371121-26032002">
-y if the module has been published as an ISO standard
-</span>&nbsp;</span>
+  <li><tt>published&nbsp;&nbsp;&nbsp;</tt></span><tt>&nbsp;</tt></span><span class="919371121-26032002">
+<span class="772050311-26032002">
+y if the module has been published as an ISO standard</span>
+</span><span class="772050311-26032002"> (</span><tt><span class="919371121-26032002"> should be
+y 2002 for PDM modules)
+</span></tt>
+<span class="919371121-26032002">
+<span class="772050311-26032002"> </span>
+.</span><span class="772050311-26032002">&nbsp;</span>
 <span class="772050311-26032002">
   <li><tt>rcs.date</tt>&nbsp;&nbsp;&nbsp;&nbsp; Date attribute for source control software like RCS or
-    CVS. E.g. <tt>$Date: 2002/05/30 17:41:34 $</tt>
+    CVS. E.g. <tt>$Date: 2002/06/03 16:10:06 $</tt>
   <li><tt>rcs.revision&nbsp;&nbsp;&nbsp;&nbsp; </tt>Revision attribute for source control software like
-    RCS or CVS. E.g. <tt>$Revision: 1.4 $</tt></li>
+    RCS or CVS. E.g. <tt>$Revision: 1.5 $</tt></li>
 </ul>
 
   <div>
@@ -684,7 +687,7 @@ y if the module has been published as an ISO standard
     <span class="672234308-30052002"><font face="Arial" size="2">wg.number.supersedes
     with the old WG number to the module element in the module.xml file.</font></span>
   </div>
-  <p><br>
+  <p>&nbsp;
   </p>
 
 <h2><a name="preparing"></a>Preparing descriptions and definitions.&nbsp;&nbsp;</h2>
@@ -739,7 +742,7 @@ Use of abbreviations "e.g." or "i.e. is not allowed by the SC4 directives. "e.g.
   <p>&lt;?xml version=&quot;1.0&quot; encoding="UTF-8"?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;&nbsp; ...
   Second tag in file. Note leading explanation point<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.4 2002/05/30 17:41:34 thendrix Exp $ --><br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.5 2002/06/03 16:10:06 thendrix Exp $ --><br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;</p>
 
 </blockquote>
@@ -868,17 +871,17 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.4 2002/05/30 17:41:34 thendrix Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.5 2002/06/03 16:10:06 thendrix Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.4 2002/05/30 17:41:34 thendrix Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.5 2002/06/03 16:10:06 thendrix Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&nbsp; rcs.date=&quot;$Date: 2002/05/30 17:41:34 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.4 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/06/03 16:10:06 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.5 $&quot;&gt;</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">=======<br>
 </span></font></p>
 <p>&nbsp;</p>
