--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: index.htm,v 1.15 2002/04/30 20:50:01 joshualubell Exp $ -->
+<!-- $Id: index.htm,v 1.16 2002/05/07 16:23:49 joshualubell Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.15 $</small>
+          <small>$Revision: 1.17 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -25,17 +25,19 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       </td>
     </tr>    
   </table>
-  <hr/>
-  <center>
-    <small>
-      [
-      <a href="../repository_index.htm">STEPmod HTML</a>
-      &nbsp;|&nbsp;
-      <a href="../repository_index.xml">STEPmod XML</a>
-      &nbsp;|&nbsp;
-  <a href="index.htm">Help index</a>
-      ]
-    </small>
+  <hr/><center><small>
+      [ 
+      &nbsp;|&nbsp; <a href="index.htm">Help index</a> 
+      &nbsp;|&nbsp; <a href="additional_module_guidelines.htm">Additional guidelines</a> 
+      &nbsp;|&nbsp; <a href="GE_guidelines.htm">Graphical Express specific guidelines</a> 
+  ] </small>
+  </center>
+<center><small>
+      [ 
+      <a href="../repository_index.htm">Back to STEPmod HTML</a> 
+      &nbsp;|&nbsp; 
+      <a href="../repository_index.xml">Back to STEPmod XML</a> 
+  ] </small>
   </center>
 
   <!-- Index -->
@@ -122,7 +124,6 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   </ul>
 
     </ul>
-  </ul>
   </BODY>
 </HTML>
 
