Added latest on titles.

--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.6 2002/06/05 15:55:47 thendrix Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.7 2002/06/17 08:35:32 goset1 Exp $</p>
 <b>Contents</b><br>
 
 
@@ -181,8 +181,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/05 15:55:47 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.6 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/17 08:35:32 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.7 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -339,7 +339,7 @@ Select type</a></h2>
 <p>&nbsp;</p>
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.6 2002/06/05 15:55:47 thendrix Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.7 2002/06/17 08:35:32 goset1 Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -347,7 +347,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.6 2002/06/05 15:55:47 thendrix Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.7 2002/06/17 08:35:32 goset1 Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -356,7 +356,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.6 2002/06/05 15:55:47 thendrix Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.7 2002/06/17 08:35:32 goset1 Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 <p><span class="198333009-21032002"><font face="Arial">In order to get the following output:</font></span><span class="919371121-26032002">
@@ -558,7 +558,36 @@ names</font></span></h2>
       use-from statement)</font></li>
 </ul>
 
-<h3>&nbsp;<a name="egtitles"></a>Templates for Express-G titles.</h3>
+<h3>&nbsp;<a name="egtitles"></a>Titles for Express-G diagrams</h3>
+
+<p>Titles for diagrams are constructed from attributes&nbsp; in the <font face="Arial" size="2">imgfile.content
+tag in armexpg1.xml, etc.</font></p>
+
+<div style="width: 595; height: 102">
+  The xsl creates titles automatically&nbsp; if&nbsp; <font face="Arial" size="2">imgfile.content
+  tag has a </font>file attribute. The file tag also enables navigation of
+  diagram pages
+  <p><font face="Arial" size="2">&lt;imgfile.content<br>
+  &nbsp;&nbsp;&nbsp;&nbsp; module=&quot;activity&quot;<br>
+  &nbsp;&nbsp;&nbsp;&nbsp; f<b>ile=&quot;armexpg1.xml&quot;</b><br>
+  </font>
+</div>
+</span>
+<div>
+  <font face="Arial" size="2"><span class="891501316-19062002">&nbsp;The old
+  method used an explicit title tag.</span></font>
+</div>
+<span class="919371121-26032002">
+<div>
+  <span class="891501316-19062002"><font face="Arial" size="2">&lt;imgfile.content<br>
+  &nbsp;&nbsp;&nbsp;&nbsp; module=&quot;activity&quot;<br>
+  <strong>&nbsp;&nbsp;&nbsp;&nbsp; title=&quot;Figure C.1 - ARM Schema level
+  EXPRESS-G diagram (1 of 1)&quot;&gt;<br>
+  </strong></font></span>
+</div>
+<h4>Templates for Express-G title</span> (<span class="919371121-26032002">not
+needed if <font face="Arial" size="2">imgfile.content tag has </font>file
+attribute).</h4>
 
 <blockquote>
   <p>The title attribute of the element imgfile of the file armexpg1.xml should be:</p>
@@ -669,8 +698,8 @@ publicatio</h2>
     &nbsp;&nbsp; language=&quot;E&quot;<br>
     &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
     &nbsp;&nbsp; published=&quot;y&quot;<br>
-    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/05 15:55:47 $&quot;<br>
-    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.6 $&quot;&gt;</font></span>
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/17 08:35:32 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.7 $&quot;&gt;</font></span>
   </div>
   &nbsp;</span>
 <p>&nbsp;
@@ -729,9 +758,9 @@ y 2002 for PDM modules)
 .</span><span class="772050311-26032002">&nbsp;</span>
 <span class="772050311-26032002">
   <li><tt>rcs.date</tt>&nbsp;&nbsp;&nbsp;&nbsp; Date attribute for source control software like RCS or
-    CVS. E.g. <tt>$Date: 2002/06/05 15:55:47 $</tt>
+    CVS. E.g. <tt>$Date: 2002/06/17 08:35:32 $</tt>
   <li><tt>rcs.revision&nbsp;&nbsp;&nbsp;&nbsp; </tt>Revision attribute for source control software like
-    RCS or CVS. E.g. <tt>$Revision: 1.6 $</tt></li>
+    RCS or CVS. E.g. <tt>$Revision: 1.7 $</tt></li>
 </ul>
 
   <div>
@@ -798,7 +827,7 @@ Use of abbreviations "e.g." or "i.e. is not allowed by the SC4 directives. "e.g.
   <p>&lt;?xml version=&quot;1.0&quot; encoding="UTF-8"?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;&nbsp; ...
   Second tag in file. Note leading explanation point<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.6 2002/06/05 15:55:47 thendrix Exp $ --><br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.7 2002/06/17 08:35:32 goset1 Exp $ --><br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;</p>
 
 </blockquote>
@@ -927,17 +956,17 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.6 2002/06/05 15:55:47 thendrix Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.7 2002/06/17 08:35:32 goset1 Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.6 2002/06/05 15:55:47 thendrix Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.7 2002/06/17 08:35:32 goset1 Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&nbsp; rcs.date=&quot;$Date: 2002/06/05 15:55:47 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.6 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/06/17 08:35:32 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.7 $&quot;&gt;</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">=======<br>
 </span></font></p>
 <p>&nbsp;</p>
