--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.8 2002/06/19 17:25:20 thendrix Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $</p>
 <b>Contents</b><br>
 
 
@@ -41,6 +41,9 @@ to include extension of Select types</a><i><a target="_self" href="#200204221824
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_12">Inserting Notes and examples in xml files</a><br>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020426165659_1">Example or note for a term definition</a><br>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_13">Rule propositions<br>
+</a>
+<img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#Insert_table">Inserting
+a table<br>
 </a><img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#sn">Short
 names<br>
 </a><img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_14">Express-G
@@ -52,8 +55,8 @@ diagrams</a><br>
 required in module.xml&nbsp;<br>
 </a><img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a href="#req_att_imgfile">Attributes
 required in armexpg.xml and mimexpg.xml</a>&nbsp;
-<a href="#wg"><br>
-</a><a target="_self" href="#req_attr_module"></a><img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a href="#req_att_arm">Information
+<br>
+<img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a href="#req_att_arm">Information
 required in arm.xml and mim.xml</a>
 <a href="#wg"><br>
 </a><img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#preparing">Preparing
@@ -179,8 +182,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/19 17:25:20 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.8 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/20 11:48:25 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.9 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -337,7 +340,7 @@ Select type</a></h2>
 <p>&nbsp;</p>
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.8 2002/06/19 17:25:20 thendrix Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -345,7 +348,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.8 2002/06/19 17:25:20 thendrix Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -354,7 +357,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.8 2002/06/19 17:25:20 thendrix Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 <p><span class="198333009-21032002"><font face="Arial">In order to get the following output:</font></span><span class="919371121-26032002">
@@ -432,7 +435,54 @@ role of a document.&lt;/description&gt;<br>
 </span>
 <p><span class="832373714-15032002"><font face="Arial">is
 an informal proposition.</font></span>
-<p>&nbsp;<h2><span class="832373714-15032002"><font face="Times New Roman"><a name="sn"></a>Short
+<p>&nbsp;<h2><a name="Insert_table">Inserting a table</a></h2>
+To create a table in a module, the syntax is similar to HTML one. For example:
+<p>&nbsp;
+<p>&nbsp;&nbsp; &lt;table<br>
+&nbsp;&nbsp;&nbsp;&nbsp; caption=&quot;Table caption&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp; number=&quot;1&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &lt;tr&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;th&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; h1<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/th&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;th&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; h2<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/th&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &lt;/tr&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &lt;tr&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;td&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; cell 1<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/td&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;td&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; cell 2<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/td&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &lt;/tr&gt;<br>
+&nbsp;&nbsp; &lt;/table&gt;<br>
+<p>
+  This will produce
+</p>
+&nbsp;
+<p align="center"><b>Table 1 — Table caption</b></p>
+<center>
+<table cellSpacing="0" cellPadding="2" border="1">
+  <tbody>
+    <tr align="right">
+      <th>
+        <p align="centre"><b>h1</b></p>
+      </th>
+      <th>
+        <p align="centre"><b>h2</b></p>
+      </th>
+    </tr>
+    <tr>
+      <td>cell 1</td>
+      <td>cell 2</td>
+    </tr>
+  </tbody>
+</table>
+</center>
+<p>&nbsp;</p>
+<p>Note: shortnames tables are generated automatically by XSL Transformations<p>&nbsp;<h2><span class="832373714-15032002"><font face="Times New Roman"><a name="sn"></a>Short
 names</font></span></h2>
 
 <font face="Arial" size="2">I</font><span class="919371121-26032002"><span class="856574909-30052002"><font face="Arial" size="2">f
@@ -683,10 +733,10 @@ from the old module to new module</font></span>
     &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
     &nbsp;&nbsp; published=&quot;y&quot;<br>
     </b>
-    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/19 17:25:20 $&quot;<br>
-    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.8 $&quot;&gt;
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/06/20 11:48:25 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.9 $&quot;&gt;
   </div>
-  &nbsp;
+&nbsp;
 <p>
   Where:
 <ul>
@@ -936,17 +986,17 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.8 2002/06/19 17:25:20 thendrix Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.8 2002/06/19 17:25:20 thendrix Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.9 2002/06/20 11:48:25 goset1 Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&nbsp; rcs.date=&quot;$Date: 2002/06/19 17:25:20 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.8 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/06/20 11:48:25 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.9 $&quot;&gt;</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">=======<br>
 </span></font></p>
 <p>&nbsp;</p>
